sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:3: error: not found: value i
  i = 0
  ^AlgGnomeSort:4: error: not found: value i
  while (i<getNombreValeurs){
         ^AlgGnomeSort:5: error: not found: value getValeurs
  if (getValeurs(i)<getValeurs(i+1)){
      ^AlgGnomeSort:5: error: not found: value i
  if (getValeurs(i)<getValeurs(i+1)){
                 ^AlgGnomeSort:5: error: not found: value getValeurs
  if (getValeurs(i)<getValeurs(i+1)){
                    ^AlgGnomeSort:5: error: not found: value i
  if (getValeurs(i)<getValeurs(i+1)){
                               ^AlgGnomeSort:6: error: not found: value i
    i = i+1
    ^AlgGnomeSort:7: error: not found: value getValeurs
  } else if (getValeurs(i)>getValeurs(i+1)){
             ^AlgGnomeSort:7: error: not found: value i
  } else if (getValeurs(i)>getValeurs(i+1)){
                        ^AlgGnomeSort:7: error: not found: value getValeurs
  } else if (getValeurs(i)>getValeurs(i+1)){
                           ^AlgGnomeSort:7: error: not found: value i
  } else if (getValeurs(i)>getValeurs(i+1)){
                                      ^AlgGnomeSort:8: error: not found: value i
    echange(i,i+1)
            ^AlgGnomeSort:8: error: not found: value i
    echange(i,i+1)
              ^AlgGnomeSort:9: error: not found: value i
    if (i==0){
        ^AlgGnomeSort:10: error: not found: value i
      i = 1
      ^AlgGnomeSort:12: error: not found: value i
      i = i-1
      ^